fix layout collapse

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,15 +21,19 @@ nav {
 
 @media only screen and (max-width: 736px) {
 
+  #nav-info a:nth-child(2) {
+    margin-left: 30px;
+  }
+
   nav {
     height: 50px;
   }
 
   nav a {
     display:inline-block;
-    width: 30%;
+    width: 25%;
     float: left;
-    margin-left: 3%;
+    margin-left: 5%;
   }
 
   #logo {
